# my_first_RAG

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
pages/: ask_questions.py  search_video.py
src/: __init__.py  embedding.py  generation.py  retriever.py
src/config/: __init__.py  directories.py
