[tool.poetry]
name = "my_first_RAG"
version = "0.1.0"
description = "A Retrieval-Augmented Generation (RAG) application for YouTube video content"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">3.9.7,<4.0"
pytubefix = "^9.0.0"
pydub = "^0.25.1"
numpy = "^1.24.0"
requests = "^2.32.0"
python-dotenv = "^1.0.0"
sentence-transformers = "^2.2.2"
openai-whisper = "^20240930"
streamlit = "^1.44.0"
torch = "^2.2.0"
pinecone = "^7.0.0"
openai = "^1.0.0"
scipy = "^1.13.1"
llvmlite = "^0.43.0"
ruff = "^0.14.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = ">=3.8.1,<4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
Repository = "https://github.com/cgarciatorres7/my_first_RAG"
